First build of engine to support production mode